ADDED FORMULAS SUPPORT IN CALC EXPRESSIONS fixed exceptions via wrong css style assignment, fixed wrong working with double separators, added modes of work to parseAll function (for correct parsing in some cases), fixed offset applying to cells in calc expressions

--- a/style.css
+++ b/style.css
@@ -32,3 +32,14 @@
     width: 100%;
     display: flex;
 }
+
+.border{
+    text-align: left;
+    width: 100px;
+    height: calc(2rem);
+    padding: 0.375rem 0.75rem;
+    color: #212529;
+    background-color: #fff;
+    border: 1px solid #bdbdbd;
+    font-size: 20px;
+}
